force-app/main/default/objects/Account_Context_Action__c/Account_Context_Action__c.object-meta.xml
<CustomObject>
    <label>Account Context &amp; Action</label>
    <nameField>
        <label>Account Context or Action</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Context &amp; Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>