force-app/main/default/objects/Account_Context_Action__c/fields/Context_Action__c.field-meta.xml
<CustomField>
    <fullName>Context_Action__c</fullName>
    <label>Context &amp; Action</label>
    <referenceTo>Context_Action__c</referenceTo>
    <relationshipLabel>Account Context &amp; Actions</relationshipLabel>
    <relationshipName>Account_Context_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>