force-app/main/default/objects/Account_Context_Action__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <label>Implementation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pull</fullName>
            </value>
            <value>
                <fullName>Push</fullName>
            </value>
            <value>
                <fullName>Contributor-led</fullName>
            </value>
            <value>
                <fullName>Programmatic Creation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>