force-app/main/default/objects/Account_Context_Action__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The current status of the planned work to implement the context or actions</description>
    <inlineHelpText>The current status of the planned work to implement the context or actions</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Implemented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>