force-app/main/default/objects/Account_Context_Action__c/fields/Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Success_Criteria__c</fullName>
    <description>The criteria or metrics that will be used to track the successful implementation/rollout of the context or action</description>
    <inlineHelpText>The criteria or metrics that will be used to track the successful implementation/rollout of the context or action</inlineHelpText>
    <label>Success Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>