force-app/main/default/objects/Account_Context_Action__c/fields/Value_Streams__c.field-meta.xml
<CustomField>
    <fullName>Value_Streams__c</fullName>
    <description>The Value Streams the Context or Action is enabling</description>
    <inlineHelpText>The Value Streams the Context or Action is enabling</inlineHelpText>
    <label>Value Streams</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data access to externals</fullName>
            </value>
            <value>
                <fullName>Data discrepancy issues</fullName>
            </value>
            <value>
                <fullName>Building forecasting models</fullName>
            </value>
            <value>
                <fullName>Calculating KPIs</fullName>
            </value>
            <value>
                <fullName>Analyzing data</fullName>
            </value>
            <value>
                <fullName>Creating reports</fullName>
            </value>
            <value>
                <fullName>Debugging dashboards &amp; tables</fullName>
            </value>
            <value>
                <fullName>Maintaining pipelines</fullName>
            </value>
            <value>
                <fullName>Data migration</fullName>
            </value>
            <value>
                <fullName>Reducing storage cost</fullName>
            </value>
            <value>
                <fullName>Data deletion requests</fullName>
            </value>
            <value>
                <fullName>Enforcing security policies</fullName>
            </value>
            <value>
                <fullName>Deletion of 3rd party data</fullName>
            </value>
            <value>
                <fullName>Providing data access</fullName>
            </value>
            <value>
                <fullName>Developing algorithms</fullName>
            </value>
            <value>
                <fullName>Analysing reports</fullName>
            </value>
            <value>
                <fullName>Addressing analyst requests</fullName>
            </value>
            <value>
                <fullName>Building new pipelines</fullName>
            </value>
            <value>
                <fullName>Deleting duplicate assets</fullName>
            </value>
            <value>
                <fullName>Creating audit reports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>